--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN="OTQzNjUyOTE5MTAwNzI3MzQ4.Yg2LRA.578VTztnmM6VygdFlhXwhWCkNf8"
+DISCORD_TOKEN=".Yg2LRA.578VTztnmM6VygdFlhXwhWCkNf8"
 DISCORD_CLIENT_ID="943652919100727348"
 DISCORD_GUILD_ID="899660012958412830"
