--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Notify about SLP and AXS prices",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm run build",
     "start": "node index.js",
     "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
