--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "mongodb": "^4.4.0",
     "node-fetch": "^2.6.7"
   }
 }
